# DMME-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  main.cpp
src/core/renderer/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  GPUSurface.cpp  GPUSurface.h  RenderPipeline.cpp  RenderPipeline.h  RenderTypes.h
src/core/renderer/drivers/: DX11Driver.cpp  DX11Driver.h  DriverInterface.h  OpenGLDriver.cpp  OpenGLDriver.h
src/core/window/: CMakeLists.txt  ClickThrough.cpp  ClickThrough.h  MultiMonitor.cpp  MultiMonitor.h  OpacityController.cpp  OpacityController.h  TransparentWindow.cpp  TransparentWindow.h  WindowTypes.h
src/utils/: Logger.cpp  Logger.h
